added reload modules script. as well as added api call to reload the server
